--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container-fluid bgc">
     <div class="row">
       <div class="col-md-1">
-        <img src="logo.jpg" class="img-fluid rounded-pill" width="70" alt="">
+        <img src="image/logo.jpg" class="img-fluid rounded-pill" width="70" alt="">
       </div>
       <div class="col-md-11">
         <h3 class="text-light title">sabbir mahmud</h3>
@@ -206,5 +206,6 @@
 </body>
 
 </html>
+
 
 
